--- a/CSS/SignInStyle.css
+++ b/CSS/SignInStyle.css
@@ -6,7 +6,7 @@ body {
     color: #333;
 }
 
-.signup-container {
+.signin-container {
     max-width: 400px;
     margin: 50px auto;
     padding: 20px;
@@ -16,7 +16,7 @@ body {
     text-align: center;
 }
 
-.signup-container h1 {
+.signin-container h1 {
     margin-bottom: 30px;
     color: #007bff;
 }
@@ -32,7 +32,6 @@ body {
     font-weight: bold;
 }
 
-.form-group input[type="text"],
 .form-group input[type="email"],
 .form-group input[type="password"] {
     width: 100%;
@@ -63,14 +62,14 @@ button[type="submit"]:hover {
     background-color: #1e7e34;
 }
 
-.social-signup {
+.social-signin {
     display: flex;
     justify-content: space-around;
     margin: 20px 0;
 }
 
 .social-btn {
-    padding: 2px;
+    padding: 10px;
     font-size: 1.5rem;
     border: none;
     cursor: pointer;
